[package]
name = "omnis-nulla"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
tracing = "0.1.28"
tracing-subscriber = "0.2.25"
sha3 = "0.10.0"
ethers = "2.0"
libsecp256k1 = "0.7.1"
tiny-keccak = "2.0.2"
rayon = "1.8.0"

[[bin]]
name = "omnis_nulla"
path = "src/main.rs"

[lib]
name = "omnis_nulla_lib"
path = "src/lib.rs"